--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -63,7 +63,7 @@ jobs:
     #    uses a compiled language
 
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build --force
     
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
