--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,6 @@ jobs:
     name: Build
     runs-on: windows-latest
     steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -44,7 +42,9 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-          dotnet build Project.sln --configuration Release
+          pwd
+          ls -la
+          dotnet build Project.sln
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"VandelaySecurity2_public-test" /o:"vandelaysecurity2" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
           dotnet clean
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
