--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
         shell: powershell
         run: |
           pwd
-          ls -la
+          dir
           dotnet build Project.sln
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"VandelaySecurity2_public-test" /o:"vandelaysecurity2" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
           dotnet clean
